--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!-- Based on course https://www.youtube.com/watch?v=moBhzSC455o -->
+<!-- Based on tutorials https://www.youtube.com/watch?v=moBhzSC455o
+    and https://www.youtube.com/watch?v=jV8B24rSN5o -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -45,7 +46,6 @@
             </div>
         </section>
 
-
         <!-- Boxes -->
         <section class="boxes">
             <div class="box">
@@ -79,21 +79,21 @@
                     nemo non repellendus?
                     Quae atque vero modi quidem! Autem cupiditate fugit doloribus ad amet, asperiores provident commodi.
                 </p>
-                <a href="#" class="btn">Learn More</a>
+                <a href="#" class="btn">See More</a>
             </div>
         </section>
 
         <!-- Pictures -->
         <section class="Pictures">
-            <img class="pic1" src="https://www.placecage.com/c/209/200" alt="">
-            <img class="pic2" src="https://www.placecage.com/c/201/200" alt="">
-            <img class="pic3" src="https://www.placecage.com/c/202/200" alt="">
-            <img class="pic4" src="https://www.placecage.com/c/203/200" alt="">
-            <img class="pic5" src="https://www.placecage.com/c/204/200" alt="">
-            <img class="pic6" src="https://www.placecage.com/c/205/200" alt="">
-            <img class="pic7" src="https://www.placecage.com/c/210/200" alt="">
-            <img class="pic8" src="https://www.placecage.com/c/207/200" alt="">
-            <img class="pic9" src="https://www.placecage.com/c/208/200" alt="">
+            <img class="pic1" src="https://www.placecage.com/c/209/200" alt="" title="pic1">
+            <img class="pic2" src="https://www.placecage.com/c/201/200" alt="" title="pic2">
+            <img class="pic3" src="https://www.placecage.com/c/202/200" alt="" title="pic3">
+            <img class="pic4" src="https://www.placecage.com/c/203/200" alt="" title="pic4">
+            <img class="pic5" src="https://www.placecage.com/c/204/200" alt="" title="pic5">
+            <img class="pic6" src="https://www.placecage.com/c/205/200" alt="" title="pic6">
+            <img class="pic7" src="https://www.placecage.com/c/210/200" alt="" title="pic7">
+            <img class="pic8" src="https://www.placecage.com/c/207/200" alt="" title="pic8">
+            <img class="pic9" src="https://www.placecage.com/c/208/200" alt="" title="pic9">
         </section>
 
         <!-- Footer -->
